# reading-agent

./: README.md  pyproject.toml  sample.env
reading_agent/: __main__.py  agent.py  pdf_extractor.py  utils.py
reading_agent/backends/: base.py  bedrock.py  chatgpt.py  gemini.py
reading_agent/models/: base.py
reading_agent/prompts/: lookup.py  pagination.py  shorten.py
